--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -11,6 +11,10 @@
   src: local('Material Icons'), local('MaterialIcons-Regular'), url(../fonts/2fcrYFNaTjcS6g4U3t-Y5RV6cRhDpPC5P4GCEJpqGoc.woff) format('woff');
 }
 
+.center{
+  text-align:center;
+}
+
 .material-icons {
   font-family: 'Material Icons';
   font-weight: normal;
