--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -51,6 +51,9 @@
 .mu-buttom-item{
   padding:4px;
 }
+.mu-radio-icon{
+  margin-right:10px;
+}
 .mu-infinite-scroll{
   min-height:50px;
   line-height:50px;
@@ -70,9 +73,37 @@
 .mu-list{
   padding:0;
 }
-.mu-dialog{
+/*.mu-dialog{
   width: 90%;
 }
 .mu-dialog-body{
   padding:0 0 30px 0;
+}*/
+
+.slide-left-enter, .slide-right-leave-active {
+  opacity: 0;
+  -webkit-transform: translate(50px, 0);
+  transform: translate(50px, 0);
+}
+.slide-left-leave-active, .slide-right-enter {
+  opacity: 0;
+  -webkit-transform: translate(-50px, 0);
+  transform: translate(-50px, 0);
+}
+.footer-tabs{
+  position:fixed;
+  bottom:0;
+  width:100%;
+  transition: .1s all ease-out;
+}
+
+.slide-up-enter, .slide-down-leave-active {
+  opacity: 0;
+  -webkit-transform: translate(0, 50px);
+  transform: translate(0, 50px);
+}
+.slide-up-leave-active, .slide-down-enter {
+  opacity: 0;
+  -webkit-transform: translate(0, 50px);
+  transform: translate(0, 50px);
 }
