--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -46,7 +46,13 @@
   position:absolute;
   height:100%;
   overflow-y:auto;
-  padding:10px;
+  padding:10px 10px 48px 10px;
+}
+.mu-dialog .mu-appbar{
+  position:relative;
+}
+.mu-dialog-body{
+  padding:0;
 }
 .mu-buttom-item{
   padding:4px;
@@ -63,6 +69,15 @@
 }
 .has-footer{
   padding-bottom:100px;
+}
+.field{
+  display:flex;
+}
+.field label:first-child{
+  flex:0 0 100px;
+  font-size:16px;
+  height:56px;
+  line-height:44px;
 }
 .demo-popup-left {
   display: flex;
